--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initi;">
         <title>Yaweh is great</title>
         <link rel="stylesheet" href="style.css">
-        <script> src="app.js"</script>
+        <script src="app.js"> </script>
 
     </head>
 
